--- a/.github/workflows/build-check.yml
+++ b/.github/workflows/build-check.yml
@@ -12,4 +12,4 @@ jobs:
         with:
           node-version: '18.18.0'
       - run: npm install
-      - run: npm build
+      - run: npm run build
