--- a/.github/workflows/lint-check.yml
+++ b/.github/workflows/lint-check.yml
@@ -1,10 +1,10 @@
-name: build check
+name: lint check
 
 on: pull_request
 
 jobs:
-  build-test:
-    name: build test
+  eslint-test:
+    name: eslint test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -12,4 +12,4 @@ jobs:
         with:
           node-version: '18.18.0'
       - run: npm install
-      - run: npm run build
+      - run: npm run lint
