--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint 'src/**/*.{js,jsx}' --fix",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate-enums": "node scripts/copyJavaEnums"
   },
   "lint-staged": {
     "*.{js,jsx}": [
