--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     "lint-staged": "lint-staged",
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint 'src/**/*.{js,jsx}' --fix",
+    "lint": "eslint 'src/**/*.{ts,tsx}' --fix",
     "preview": "vite preview",
+    "typecheck": "tsc --noEmit",
     "generate-enums": "node scripts/copyJavaEnums"
   },
   "lint-staged": {
-    "*.{js,jsx}": [
+    "*.{ts,tsx}": [
       "eslint --fix"
     ],
-    "*.{svg,md,html,json}": [
+    "*.{js,jsx,svg,md,html,json}": [
       "prettier --write"
     ]
   },
@@ -29,7 +30,6 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "axios": "^1.5.1",
-    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
@@ -38,10 +38,11 @@
     "@babel/eslint-parser": "^7.22.15",
     "@babel/preset-react": "^7.22.15",
     "@emotion/eslint-plugin": "^11.11.0",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "^18.2.28",
+    "@types/react-dom": "^18.2.13",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
     "@vitejs/plugin-react": "^4.0.3",
-    "babel-eslint": "^10.1.0",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-import-resolver-node": "^0.3.9",
@@ -55,6 +56,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "prettier": "3.0.3",
+    "typescript": "^5.2.2",
     "vite": "^4.4.5"
   },
   "engines": {
