--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,12 +21,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "incremental": true,
-    "baseUrl": "./src",
+    "typeRoots": ["@types", "node_modules/@types"],
+    "baseUrl": "src",
     "paths": {
       "@/*": ["*"]
     }
   },
-  "typeRoots": ["./@types", "node_modules/@types"],
-  "include": ["vite-env.d.ts", "src/**/*.ts", "src/**/*.tsx"],
+  "include": ["vite-env.d.ts", "src/**/*.ts", "src/**/*.tsx", "@types"],
   "exclude": ["node_modules", "scripts"]
 }
