--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,18 +15,17 @@
     "noEmit": true,
     "esModuleInterop": true,
     "jsx": "react-jsx",
-    "types": ["vite/client", "@emotion/react/types/css-prop"],
+    "types": ["vite/client", "@emotion/react/types/css-prop", "./@types/emotion.d.ts"],
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "incremental": true,
-    "baseUrl": "./src",
+    "baseUrl": "src",
     "paths": {
       "@/*": ["*"]
     }
   },
-  "typeRoots": ["./@types", "node_modules/@types"],
-  "include": ["vite-env.d.ts", "src/**/*.ts", "src/**/*.tsx"],
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["node_modules", "scripts"]
 }
