--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "axios": "^1.5.1",
+    "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.3",
