--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "framer-motion": "^10.16.4",
     "axios": "^1.5.1",
+    "formik": "^2.4.5",
+    "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.22.15",
