chore: kakaoMap API 패키지 설치 및 초기 설정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "jsx": "react-jsx",
-    "types": ["vite/client", "@emotion/react/types/css-prop", "./@types/emotion.d.ts"],
+    "types": ["vite/client", "@emotion/react/types/css-prop", "./@types/emotion.d.ts", "kakao.maps.d.ts"],
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
