--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
+    "react-kakao-maps-sdk": "^1.1.21",
     "react-router-dom": "^6.16.0",
     "zustand": "^4.4.3"
   },
