feat: 위치 정보 제공 동의 창은 https 에서만 뜨기 때문에 로컬 개발 환경을 https 로 변경

--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "lint-staged": "^14.0.1",
     "prettier": "3.0.3",
     "typescript": "^5.2.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-mkcert": "^1.16.0"
   },
   "engines": {
     "node": ">=18.18.0",
