--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@babel/eslint-parser": "^7.22.15",
     "@babel/preset-react": "^7.22.15",
     "@emotion/eslint-plugin": "^11.11.0",
+    "@faker-js/faker": "^8.2.0",
     "@types/qs": "^6.9.9",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
@@ -62,6 +63,7 @@
     "eslint-plugin-unused-imports": "^3.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
+    "msw": "^2.0.3",
     "prettier": "3.0.3",
     "typescript": "^5.2.2",
     "vite": "^4.4.5",
@@ -70,5 +72,8 @@
   "engines": {
     "node": ">=18.18.0",
     "npm": ">=9.8.1"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
