--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^18.2.0",
     "react-kakao-maps-sdk": "^1.1.21",
     "react-router-dom": "^6.16.0",
+    "ts-pattern": "^5.0.5",
     "zustand": "^4.4.3"
   },
   "devDependencies": {
