--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "react-dom": "^18.2.0",
     "react-kakao-maps-sdk": "^1.1.21",
     "react-router-dom": "^6.16.0",
+    "ts-pattern": "^5.0.5",
     "zustand": "^4.4.3"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.22.15",
     "@babel/preset-react": "^7.22.15",
     "@emotion/eslint-plugin": "^11.11.0",
+    "@faker-js/faker": "^8.2.0",
     "@types/qs": "^6.9.9",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
@@ -63,6 +65,7 @@
     "eslint-plugin-unused-imports": "^3.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
+    "msw": "^2.0.3",
     "prettier": "3.0.3",
     "typescript": "^5.2.2",
     "vite": "^4.4.5",
@@ -71,5 +74,8 @@
   "engines": {
     "node": ">=18.18.0",
     "npm": ">=9.8.1"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
